syntax = "proto2";
package ssmessage;
option go_package = "initialthree/protocol/ss/ssmessage";

message scarsIngrainUpdate {
    optional int64 version = 1;
    optional int32 id = 2;
}